// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switch [snapshot] > md 1`] = `
<button
  aria-checked="false"
  class="vesper-switch vesper-switch-md"
  data-state="unchecked"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="vesper-switch-thumb"
    data-state="unchecked"
  />
</button>
`;

exports[`switch [snapshot] > md, disabled 1`] = `
<button
  aria-checked="false"
  class="vesper-switch vesper-switch-md"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="vesper-switch-thumb"
    data-disabled=""
    data-state="unchecked"
  />
</button>
`;

exports[`switch [snapshot] > md, with label 1`] = `
<label
  class="vesper-switch-label"
>
  <button
    aria-checked="false"
    class="vesper-switch vesper-switch-md"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="vesper-switch-thumb"
      data-state="unchecked"
    />
  </button>
  <p
    class="vesper-typography vesper-typography-label-lg"
  >
    Label
  </p>
</label>
`;

exports[`switch [snapshot] > sm 1`] = `
<button
  aria-checked="false"
  class="vesper-switch vesper-switch-sm"
  data-state="unchecked"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="vesper-switch-thumb"
    data-state="unchecked"
  />
</button>
`;

exports[`switch [snapshot] > sm, disabled 1`] = `
<button
  aria-checked="false"
  class="vesper-switch vesper-switch-sm"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="vesper-switch-thumb"
    data-disabled=""
    data-state="unchecked"
  />
</button>
`;

exports[`switch [snapshot] > sm, disabled, with label 1`] = `
<label
  class="vesper-switch-label"
>
  <button
    aria-checked="false"
    class="vesper-switch vesper-switch-sm"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="vesper-switch-thumb"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
  <p
    class="vesper-typography vesper-typography-label-md"
  >
    Label
  </p>
</label>
`;

exports[`switch [snapshot] > sm, disabled, with label 2`] = `
<label
  class="vesper-switch-label"
>
  <button
    aria-checked="false"
    class="vesper-switch vesper-switch-sm"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="vesper-switch-thumb"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
  <p
    class="vesper-typography vesper-typography-label-md"
  >
    Label
  </p>
</label>
`;

exports[`switch [snapshot] > sm, with label 1`] = `
<label
  class="vesper-switch-label"
>
  <button
    aria-checked="false"
    class="vesper-switch vesper-switch-sm"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="vesper-switch-thumb"
      data-state="unchecked"
    />
  </button>
  <p
    class="vesper-typography vesper-typography-label-md"
  >
    Label
  </p>
</label>
`;
